Bump to google-java-format 1.10.0